[project]
name = "project-mad-nodes"
description = "Precise visual control over LoRA strength scheduling via curve editor, plus a drag-and-drop prompt gallery for instant metadata extraction."
version = "1.2.0"
license = { file = "LICENSE" }

authors = [
    { name = "Project MAD" }
]

keywords = [
    "comfy",
    "comfyui",
    "lora",
    "schedule",
    "scheduling",
    "curve",
    "curve-editor",
    "hooks",
    "vectors",
    "block-weights",
    "architecture-detection",
    "gallery",
    "metadata",
    "prompt",
    "visual",
    "flux",
    "sdxl"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]

dependencies = []

[project.urls]
Repository = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES"
Documentation = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/readme.md"
"Bug Tracker" = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/issues"
Changelog = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/CHANGELOG.md"

[tool.comfy]
PublisherId = "projectmad"
DisplayName = "PROJECT-MAD-NODES"
Icon = "https://raw.githubusercontent.com/PROJECTMAD/PROJECT-MAD-NODES/main/assets/icon.jpg"