[project]
name = "project-mad-nodes"
description = "Advanced LoRA scheduling with visual curves, block weights (LBW), and architecture detection. Includes a visual prompt gallery for workflow metadata management. Strongly recommend using LoRA Manager for metadata building."
version = "1.2.1"
license = { file = "LICENSE" }

authors = [
    { name = "Project MAD" }
]

keywords = [
    "comfyui",
    "custom-nodes",
    "lora",
    "lora-loader",
    "scheduling",
    "scheduler",
    "curve-editor",
    "block-weights",
    "lbw",
    "vectors",
    "hooks",
    "gallery",
    "metadata",
    "prompt-management",
    "image-browser",
    "sdxl",
    "flux",
    "pony",
    "sd3",
    "illustrious"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = []

[project.urls]
Repository = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES"
Documentation = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/readme.md"
"Bug Tracker" = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/issues"
Changelog = "https://github.com/PROJECTMAD/PROJECT-MAD-NODES/blob/main/CHANGELOG.md"

[tool.comfy]
PublisherId = "projectmad"
DisplayName = "PROJECT-MAD-NODES"
Icon = "https://raw.githubusercontent.com/PROJECTMAD/PROJECT-MAD-NODES/main/assets/icon.jpg"